--- a/views/group2.ejs
+++ b/views/group2.ejs
@@ -282,7 +282,9 @@ textarea {
         
         </style>
  </head>
- <body> 
+<body style="visibility: hidden"
+      onload="setTimeout ('document.body.style.visibility = \'visible\'', 0)">
+
      
    <header>
    
