--- a/views/users.ejs
+++ b/views/users.ejs
@@ -382,7 +382,8 @@ textarea {
        
         </style>
  </head>
- <body> 
+<body style="visibility: hidden"
+      onload="setTimeout ('document.body.style.visibility = \'visible\'', 0)">
      
    <header>
    
