--- a/views/groups2.ejs
+++ b/views/groups2.ejs
@@ -377,7 +377,8 @@ textarea {
        
         </style>
  </head>
- <body> 
+<body style="visibility: hidden"
+      onload="setTimeout ('document.body.style.visibility = \'visible\'', 0)">
      
    <header>
    
