--- a/views/groups2.ejs
+++ b/views/groups2.ejs
@@ -374,11 +374,15 @@ textarea {
          
         }
         
+      .hideAll  {
+        visibility:hidden;
+     }
+
        
         </style>
  </head>
-<body style="visibility: hidden"
-      onload="setTimeout ('document.body.style.visibility = \'visible\'', 0)">
+<body>
+    <div id="tabs" class="hideAll">
      
    <header>
    
@@ -457,16 +461,15 @@ textarea {
                                                                    });
                       </script>
                               </div>
-                            
-     <script Language="JavaScript">   function sleep(ms) {
-ms += new Date().getTime();
-while (new Date() < ms){}
-} 
-sleep(20);
-</script>
       
+        <script type="text/javascript">
+    $(window).load(function () {
+        $("#tabs").removeClass("hideAll");
+    });
+</script>
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>         
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>        
+        </div>
       </body>
 </html>
