--- a/views/users.ejs
+++ b/views/users.ejs
@@ -21,6 +21,11 @@
     <style>
         
         
+   
+    .hideAll  {
+        visibility:hidden;
+     }
+
         
         hr {
     border: none; /* Убираем границу */
@@ -382,9 +387,18 @@ textarea {
        
         </style>
  </head>
-<body style="visibility: hidden"
-      onload="setTimeout ('document.body.style.visibility = \'visible\'', 0)">
+<body>
+    <div id="tabs" class="hideAll">
      
+    <div id="result">Тут будет ответ от сервера</div><br /><br />
+
+<div onclick="SendGet();">Отправить GET запрос через Ajax</div><br />
+
+<div onclick="SendPost();">Отправить POST запрос через Ajax</div><br />
+
+<div onclick="SendHead();">Отправить HEAD запрос через Ajax</div><br />
+
+    
    <header>
    
            </header><nav>
@@ -449,8 +463,38 @@ while (new Date() < ms){}
 } 
 sleep(20);
 </script>
+    
+     <script>
+        $("form").submit(function(e) {
+             
+            e.preventDefault();
+            var registerForm = document.forms["registerForm"];
+            var userName = registerForm.elements["userName"].value;
+            var userAge = registerForm.elements["userAge"].value;
+             
+            $.ajax({
+                type: "POST",
+                url: "/user",
+                data: JSON.stringify({userName: userName, userAge: userAge}),
+                dataType: "json",
+                contentType: "application/json",
+                success: function(data){ 
+                    console.log(data);
+                    },
+                });
+        });
+    </script>
+
+
+<script type="text/javascript">
+    $(window).load(function () {
+        $("#tabs").removeClass("hideAll");
+    });
+</script>
+    <script type="text/javascript" src="http://scriptjava.net/source/scriptjava/scriptjava.js"></script>
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>         
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
+        </div>
       </body>
 </html>
