--- a/views/wishes2.ejs
+++ b/views/wishes2.ejs
@@ -378,13 +378,16 @@ textarea {
             font-size: 3em;
          
         }
-        
+      
+    .hideAll  {
+        visibility:hidden;
+     }
+
        
         </style>
  </head>
-<body style="visibility: hidden"
-      onload="setTimeout ('document.body.style.visibility = \'visible\'', 0)">
-     
+<body>
+    <div id="tabs" class="hideAll">
    <header>
    
            </header>
@@ -471,31 +474,14 @@ textarea {
               
              </div>
                               </div>
-   <script type="text/javascript">
-
-
-// Dean Edwards/Matthias Miller/John Resig
-
-function init() {
-// выходим, если функция уже выполнялась
-if (arguments.callee.done) return;
-
-// устанавливаем флаг, чтобы функция не исполнялась дважды
-arguments.callee.done = true;
-
-$('.main').show();
-};
-
-window.onload = init;
-</script>
-     <script Language="JavaScript">   function sleep(ms) {
-ms += new Date().getTime();
-while (new Date() < ms){}
-} 
-sleep(20);
+    <script type="text/javascript">
+    $(window).load(function () {
+        $("#tabs").removeClass("hideAll");
+    });
 </script>
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>         
       </body>
+    </div>
 </html>
