--- a/views/group2.ejs
+++ b/views/group2.ejs
@@ -454,7 +454,8 @@ function copyToClipboard(elem) {
     }
     return succeed;
 }</script>
-<script type="text/javascript">  $(window).load(function() {  document.getElementById("hideAll").style.display = "none"; });</script>
+  <script>  window.onload = function() 
+  { document.getElementById("hideAll").style.display = "none"; }</script>
          </div>
       </body>
 </html>
