--- a/views/users.ejs
+++ b/views/users.ejs
@@ -384,21 +384,23 @@ textarea {
          
         }
         
+      #hideAll
+ {
+   position: fixed;
+   left: 0px; 
+   right: 0px; 
+   top: 0px; 
+   bottom: 0px; 
+   background-color: white;
+   z-index: 99; /* Higher than anything else in the document */
+
+ }
        
         </style>
  </head>
 <body>
-    <div id="tabs" class="hideAll">
+    <div style="display: none" id="hideAll">&nbsp;
      
-    <div id="result">Тут будет ответ от сервера</div><br /><br />
-
-<div onclick="SendGet();">Отправить GET запрос через Ajax</div><br />
-
-<div onclick="SendPost();">Отправить POST запрос через Ajax</div><br />
-
-<div onclick="SendHead();">Отправить HEAD запрос через Ajax</div><br />
-
-    
    <header>
    
            </header><nav>
@@ -486,12 +488,9 @@ sleep(20);
     </script>
 
 
-<script type="text/javascript">
-    $(window).load(function () {
-        $("#tabs").removeClass("hideAll");
-    });
-</script>
-    <script type="text/javascript" src="http://scriptjava.net/source/scriptjava/scriptjava.js"></script>
+  <script>  window.onload = function() 
+  { document.getElementById("hideAll").style.display = "none"; }</script>
+   
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>  
