--- a/views/group.ejs
+++ b/views/group.ejs
@@ -2,195 +2,178 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>WantIt</title>
-     
-     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
+  <title>Крестраж</title>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
      <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #232323;
-             color: white;
-    text-align:center;
-    margin-top: 5%;
-}
-table {
-    background-color: #1e1833;
-    border-collapse: separate;
-    width: 90%;
-   margin-left:5%;
-     margin-right:5%;
-}
-         a { 
-             color: white;
-    text-decoration: none; /* Отменяем подчеркивание у ссылки */
-   }
+      <link rel = "stylesheet" href="/styles.css"/>
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </head>
+<body>
+   
 
-th, td {
-    padding-right: 0px;
-    padding-left: 0px;
-    text-align: center;
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
-    .Wishtd:hover{
-    text-decoration: line-through;
-    background: rgba(22,41,48,0.5);
-}
-
-tr:nth-child(even){background-color: #162930}
-
-th {
-    font-size: 1.2em;
-    background-color: #1e1833;
-    color: white;
-}
-textarea {
-    width: 70%;
-    padding: 1%;
-    text-align: center;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    font-size: 1.1em;
-    outline: none;
-	-moz-appearance: none;
-	border: 1px solid #110051;
-    resize: none;
-	overflow: auto;
-}
-        
-.add {
-    background-color: #1e1833;
-    border: none;
-    color: white;
-    width: 100%;
-    padding: 10% 10%;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 100%;
-}        
-     </style>
- </head>
- <body> 
      
    <header>
-    <h1 font-size="20px" align="center">WantIT Groups</h1>
+   
            </header>
- <style>
-.top-fixed_ul {
-    z-index: 100;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.top-fixed_li {
-    float: left;
-}
-
-.top-fixed_li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.top-fixed_li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #4CAF50;
-}
-     
-     .groupButtonSelected
-     {
-         margin-left: 1%;
-        background-color: green;
-         color: white;
-         border: 0px solid green;
-         border-radius: 10%;
-     }  
-      .groupButton
-     {
-         margin-left: 1%;
-        background-color: #5389a6;
-         color: white;
-         border: 0px solid #5389a6;
-         border-radius: 10%;
-     }  
-      .WishtdNOTOWNER:hover{
-     text-shadow: 0px 0px 2px white
-}
-    </style>
 <nav>
     <ul class="top-fixed_ul">
-        <li class="top-fixed_li"><a href="/wishes/">Желания</a></li>
-        <li class="top-fixed_li"><a href="/groups">Группы</a></li>
-        <li class="top-fixed_li"><a href="/user/<%= user %>/">Аккаунт </a></li>
+        
+     
+        
+        <li class="top-fixed_li imgos" style="float: left;"><a></a></li>
+          
+        <li class="navwishes top-fixed_li "><a href="/wishes/">Желания</a></li>
+        <li class="top-fixed_li navmenu navgroups"><a href="/groups">Группы</a></li>
+        <li class="top-fixed_li navmenu navacc"><a href="/user/<%= user %>/">Аккаунт </a></li>
+        <li class="top-fixed_li"  style="float: none;"><p class="maintext" >Крестраж!</p></li>
     </ul>
 </nav>
      <p>
     
          <div style="text-align:center;">
-           <table>
-                <form method="POST"  text-align="center">
-               <tr>
-                   <h4>Название вашей группы - <%= selected %></h4>
-                    <h5>Пригласительный код: 159.253.21.77:8080/group/invite/<%= data[0].InviteCode %></h5>
-               </tr>
-               </form>
-                <tr>
-                    <th>Пользователь</th>
-                </tr>
-                  <form text-align="center">
-               <% for (var i = (data.length - 1); i >= 0; i--){ %>
-                <tr>
-                    <% if (user == data[i].Author){ %>
-                      <% if (data[i].User != data[i].Author){ %>
-                    <td onclick='Deltest'><a class="Wishtd" href = "delete/<%= data[i].User %>"><%= data[i].User %> </a> 
-                          <% } else { %>
-                        <td onclick='Deltest'><a class="WishtdNOTOWNER" ><%= data[i].User %> </a> 
-                         <% } %>
-                         <% } else { %>
-                         <td onclick='Deltest'><a class="WishtdNOTOWNER" href = ""><%= data[i].User %> </a> 
-                         <% } %>
-                  
-               </tr>
-               <% }  %>
+           
+                   <h3 style="padding-top: 2%; font-family: 'Poiret One', cursive; font-size: 1.5em"><%= selected %></h3>
                       
-                      <script>
-                          $("#input").keyup(function(event){
-                          if(event.keyCode == 13){
-                          $("#1").click();
-                          $(this).val('');
-                                                 }
-                                                                   });
-                      </script>
-               </form>
-         </table>
+                        <p style="color:white;" id="copyTarget" >krestrage.com/invite/<%= data[0].InviteCode %></p>
+                       
+                    <div class="src">
+                   <button id="copyButton" type="submit"><i  class="fa fa-envelope-o"></i>Пригласительный код</button>
+                  
+  <div class="line__wrap">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</div>
+                   <span id="msg"></span><br>
+             
+                     <h4 style="margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 1.7em" >*Пользователи группы*</h4>
 
+             <div class="container">
+                
+                  <form text-align="center">
+                        
+               <% for (var i = (data.length - 1); i >= 0; i--){ %> 
+                
+                   
+                   <div class="row">
+                       <div class="col-sm">
+                  <% if (user == data[i].Author){ %>
+                      <% if (data[i].User != data[i].Author){ %> 
+                    <a class="Wishtd" href = "delete/<%= data[i].User %>"> <%= data[i].User %>  </a> 
+                           <hr>
+                       </div>
+                         <% } else { %>
+                         <div class="col-sm">
+                       <a class="WishtdNOTOWNER" ><%= data[i].User %> </a> 
+                            <hr>
+                              </div>
+                       <% } %>
+                         <% } else { %>
+                        <div class="col-sm">
+                        <a class="WishtdNOTOWNER" href = ""><%= data[i].User %> </a> 
+                           <hr>
+                              </div>
+                         <% } %>
+                        
+               
+                      </div>
+                        
+               <% }  %> 
+                      
+                  
+               </form>
+         
+
+           
+                     </div>
              </div>
-          <script Language="JavaScript">   function sleep(ms) {
-ms += new Date().getTime();
-while (new Date() < ms){}
-} 
-sleep(20);
-</script>
+     <script>
+         document.getElementById("copyButton").addEventListener("click", function() {
+    copyToClipboardMsg(document.getElementById("copyTarget"), "msg");
+});
+
+document.getElementById("copyButton2").addEventListener("click", function() {
+    copyToClipboardMsg(document.getElementById("copyTarget2"), "msg");
+});
+
+document.getElementById("pasteTarget").addEventListener("mousedown", function() {
+    this.value = "";
+});
+
+
+function copyToClipboardMsg(elem, msgElem) {
+	  var succeed = copyToClipboard(elem);
+    var msg;
+    if (!succeed) {
+        msg = "Копирование не удалось"
+    } else {
+        msg = "Ключ скопирован"
+    }
+    if (typeof msgElem === "string") {
+        msgElem = document.getElementById(msgElem);
+    }
+    msgElem.innerHTML = msg;
+    setTimeout(function() {
+        msgElem.innerHTML = "";
+    }, 2000);
+}
+
+function copyToClipboard(elem) {
+	  // create hidden text element, if it doesn't already exist
+    var targetId = "_hiddenCopyText_";
+    var isInput = elem.tagName === "INPUT" || elem.tagName === "TEXTAREA";
+    var origSelectionStart, origSelectionEnd;
+    if (isInput) {
+        // can just use the original source element for the selection and copy
+        target = elem;
+        origSelectionStart = elem.selectionStart;
+        origSelectionEnd = elem.selectionEnd;
+    } else {
+        // must use a temporary form element for the selection and copy
+        target = document.getElementById(targetId);
+        if (!target) {
+            var target = document.createElement("textarea");
+            target.style.position = "absolute";
+            target.style.left = "-9999px";
+            target.style.top = "0";
+            target.id = targetId;
+            document.body.appendChild(target);
+        }
+        target.textContent = elem.textContent;
+    }
+    // select the content
+    var currentFocus = document.activeElement;
+    target.focus();
+    target.setSelectionRange(0, target.value.length);
+    
+    // copy the selection
+    var succeed;
+    try {
+    	  succeed = document.execCommand("copy");
+    } catch(e) {
+        succeed = false;
+    }
+    // restore original focus
+    if (currentFocus && typeof currentFocus.focus === "function") {
+        currentFocus.focus();
+    }
+    
+    if (isInput) {
+        // restore prior selection
+        elem.setSelectionRange(origSelectionStart, origSelectionEnd);
+    } else {
+        // clear temporary content
+        target.textContent = "";
+    }
+    return succeed;
+}</script>
+  
+ 
       </body>
 </html>
